--- a/css/style.css
+++ b/css/style.css
@@ -122,11 +122,12 @@
 
 .debug footer{
     background-color: black;
-    height: 800px;
+    height: 600px;
 }
 
 footer{
     width: 100%;
+    
     
 }
 .contenitore_footer{
@@ -136,8 +137,13 @@ footer{
     border: 2px dotted;
     justify-content: center;
     padding-top: 10px;
-    margin-bottom: 30px;
-    
+    padding-bottom:30px;
+    margin:auto;
+}
+
+.main_footer{
+    display: flex;
+    justify-content: center;
 }
 
 .debug .info{
@@ -152,6 +158,7 @@ footer{
 .debug .navigazione{
     height: 400px;
     background-color:lightseagreen; 
+    border: dotted 2px white;
 }
 
 .navigazione{
@@ -162,3 +169,37 @@ footer{
 hr{
     color: lightgrey;
 }
+
+.ultima_sezione{
+    display: flex;
+    height: 50px;
+    align-items:flex-end;
+}
+
+.finale_footer{
+    display: flex;
+    margin: 0 auto;
+    width: 70%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.debug .finale_footer{
+    height: 30px;
+    background-color: lawngreen;
+}
+
+.debug .logo_footer{
+    background-color: darksalmon;
+    border: 1px dotted black;
+    width: 50px;
+    height: 20px;
+}
+
+.debug .bottone_footer{
+    background-color: darksalmon;
+    border: 1px dotted black;
+    width: 50px;
+    height: 20px;
+}
+   
